--- a/style.css
+++ b/style.css
@@ -1,10 +1,15 @@
 body {
-    background-color: lightblue;
-    font-family: Arial, Helvetica, sans-serif;
+    background-color: rgb(255, 189, 215);
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
+body  {
+    background-image: url("https://img.freepik.com/premium-vector/white-strawberry-pattern-with-pink-background_713151-28.jpg");
+    background-color: #cccccc;
+    }
+
 h1 {
-    color:blue;
+    color:rgb(186, 8, 82);
     text-align: center;
 }
 
