--- a/style.css
+++ b/style.css
@@ -12,6 +12,12 @@ h1 {
     color:rgb(186, 8, 82);
     text-align: center;
 }
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }  
 
 p {
     padding: 5px;
